--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -11,6 +11,53 @@
         grid-gap: 30px 30px;
         grid-auto-flow: row dense;
       }
+      .title {
+        font-size: 21px;
+        font-weight: 500;
+        color: #161616;
+        margin: 30px 0;
+      }
+      .newPosters {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+        grid-gap: 30px 15px;
+        margin-bottom: 60px;
+      }
+      .speedBar {
+        font-size: 14px;
+        background-color: #f3f3f3;
+        padding: 30px;
+        margin: 0 -40px;
+        a {
+          color: #777;
+          transition: 0.3s;
+          &:hover {
+            color: #6e32cf;
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    .animeDesc {
+      display: grid;
+      grid-gap: 20px;
+      line-height: 1.7;
+      background-color: #f3f3f3;
+      padding: 50px;
+      h1 {
+        font-weight: 700;
+        font-size: 18px;
+        color: #161616;
+        line-height: 1.3;
+      }
+      p {
+        line-height: 1.7;
+        color: #777;
+      }
+      b {
+        font-weight: 700;
+        color: #777;
+      }
     }
   }
 }
