--- a/src/page/main/animePosters/animePosters.scss
+++ b/src/page/main/animePosters/animePosters.scss
@@ -98,6 +98,7 @@
           display: -webkit-box;
           -webkit-line-clamp: 1;
           -webkit-box-orient: vertical;
+          text-wrap: nowrap;
         }
       }
       &:hover {
